--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,10 @@
 /*Global*/
- 
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #f7f3ea;
@@ -19,6 +24,7 @@ body{
 
 
 /*Header*/
+
   #header{
     width: 1440px;
     height: 597px;
@@ -58,8 +64,30 @@ body{
 }
 
 #work-link{
+    align-items: center;
     padding: 63px 0 0 656px;
     position: center ;
     text-decoration: none;
     color: #f7f3ea;
+}
+
+
+/*Services*/
+
+#services{
+    width: 1439px;
+    height: 746px;
+    background-color: #17c2a4;
+}
+
+#h1-service{
+    text-align: center;
+    padding: 118px 0 50px;
+}
+
+#parrafo-service{
+
+    text-align: center;
+    font-size: 18px;
+    padding: 0 421px 0 421px;
 }
