Agregamos el texto de los iconos y le dimos estilo

--- a/css/styles.css
+++ b/css/styles.css
@@ -110,3 +110,23 @@ body{
 .box-image + .box-image{
     margin-right: 19px;
 }
+
+/*Texto de iconos*/
+
+.box{
+    text-align: center;
+    width: 260px;
+    float: left;
+}
+
+.box + .box{
+    padding: 0 20px;
+}
+
+#texto-iconos{
+    padding: 0 0 0 170px;
+}
+
+.text-padding{
+    padding: 0 0 28px;
+}
