--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,62 @@ body{
   }
 
 
+/*Modal*/
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    background-color: #cccccc;
+}
+
+a {
+    color: #ffff;
+    font-weight: bold;
+    font-size: 18px;
+    text-decoration: none;   
+}
+
+a:hover {
+    color: #616161;
+}
+
+.modal-contenido a:hover {
+    color: red;
+}
+
+h2 {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 20px;
+
+}
+
+.modal-contenido {
+    background-color: #787276;
+    width:300px;
+    padding: 10px 20px;
+    margin: 20% auto;
+    position: relative;
+}
+
+.modal {
+    background-color: rgba(0,0,0,.8);
+    position:fixed;
+    top:0;
+    right:0;
+    bottom:0;
+    left:0;
+    opacity:0;
+    pointer-events:none;
+    transition: all 0s;
+}
+
+#miModal:target {
+    opacity:1;
+    pointer-events:auto;
+}
+
 /*Header*/
 
   #header{
